<resources>
    <string name="contact">Contact Us</string>
    <string name="caught">"Caught  "</string>
    <string name="confirmLogin">Confirm and Enter</string>
    <string name="register">Register</string>
    <string name="details">Details</string>
    <string name="registerUsername">Register your Username</string>
    <string name="registerPassword">Register your Password</string>
    <string name="registerMail">Register your E-Mail</string>
    <string name="acceptCondition1">I accept your\n</string>
    <string name="acceptCondition2">Terms and Conditions</string>
    <string name="FieldsNotNullTitle">Fatal Error</string>
    <string name="FieldsNotNullText">Username, Password and Email fields\nMUST NOT be empty!</string>
    <string name="confirmRegistration">Confirm Registration</string>
    <string name="OK" translatable="false">OK</string>
    <string name="enterapp">Enter the App</string>
    <string name="insertname">Insert your name*</string>
    <string name="not_strong">Strong Against: Nothing</string>
    <string name="playpokego">Do you play Pokémon GO?</string>
    <string name="smartkedexname">Ash\' Pokédex name was "Dexter"\nRed\'s Pokédex in the last game was Rotox\nSo, what\'s YOUR Pokédex name?</string>
    <string name="tipi">Types</string>
    <string name="tipo">Type</string>
    <string name="welcome">Welcome!</string>
    <string name="description">Description</string>
    <string name="read_description">Read\nDescription</string>
    <string name="strong">Strong Against</string>
    <string name="weak">Weak Against</string>
    <string name="edit_settings">You can edit these settings at any time\nby tapping on the button in the high-right corner</string>
    <string name="insertname_error">Insert your name to access the App</string>
    <string name="editname_error">You can\'t leave your name blank</string>
    <string name="edit_details">Edit your %1$ss details</string>
    <string name="pokemon_owned_by">%2$s\'s %1$ss</string>
    <string name="edit_your_pokemons">Edit your %1$ss</string>
    <string name="number_insert_pokemons">How many %1$ss would you like to insert?</string>
    <string name="already_inserted">Registered Pokémon</string>
    <string name="apply">Apply</string>
    <string name="pokemon_to_insert">Not Registered Pokémon</string>
    <string name="hint_name">(Name)</string>
    <string name="name">Name</string>
    <string name="mivs">Moves and IV\'s %</string>
    <string name="del" translatable="false">DEL</string>
    <string name="welcome_back">Welcome back %1$s!</string>
    <string name="pokemongo_recap">\n\nPlaying PokémonGO you caught %1$d Pokémon,\nfor a total of %2$d specimens</string>
    <string name="settings">Settings</string>
    <string name="full_presentation">I\'m %1$s, and I\'m a Smarktkédex in beta version. I\'m property of %2$s</string>
    <string name="partial_presentation">I\'m a Smartkédex in beta version. I\'m property of %1$s</string>
    <string name="nidoran_female_adjust" translatable="false">#029 - Nidoran ♀</string>
    <string name="nidoran_male_adjust" translatable="false">#032 - Nidoran ♂</string>
    <string name="mrmime_adjust" translatable="false">#122 - Mr. Mime</string>
    <string name="defendenti" translatable="false">Alessandro Defendenti</string>
    <string name="credits" translatable="false">Credits</string>
    <string name="app_name" translatable="false">Smartkédex</string>
    <string name="sangalli" translatable="false">Alessia Sangalli</string>
    <string name="silletti" translatable="false">Maria Elena Silletti</string>
    <string name="tagliabue" translatable="false">Luca Tagliabue</string>
    <string name="team_name" translatable="false">RollerCoders Team</string>
    <string name="zanaboni" translatable="false">Greta Zanaboni</string>
    <string name="pkmn1">Bulbasaur. Bulbasaur can be seen napping in bright sunlight. There is a seed on its back. By soaking up the sun\'s rays, the seed grows progressively larger.</string>
    <string name="pkmn2">There is a bud on this Pokémon\'s back. To support its weight, Ivysaur\'s legs and trunk grow thick and strong. If it starts spending more time lying in the sunlight, it\'s a sign that the bud will bloom into a large flower soon.</string>
    <string name="pkmn3">There is a large flower on Venusaur\'s back. The flower is said to take on vivid colors if it gets plenty of nutrition and sunlight. The flower\'s aroma soothes the emotions of people.</string>
    <string name="pkmn4">The flame that burns at the tip of its tail is an indication of its emotions. The flame wavers when Charmander is enjoying itself. If the Pokémon becomes enraged, the flame burns fiercely.</string>
    <string name="pkmn5">Charmeleon mercilessly destroys its foes using its sharp claws. If it encounters a strong foe, it turns aggressive. In this excited state, the flame at the tip of its tail flares with a bluish white color.</string>
    <string name="pkmn6">Charizard flies around the sky in search of powerful opponents. It breathes fire of such great heat that it melts anything. However, it never turns its fiery breath on any opponent weaker than itself.</string>
    <string name="pkmn7">Squirtle\'s shell is not merely used for protection. The shell\'s rounded shape and the grooves on its surface help minimize resistance in water, enabling this Pokémon to swim at high speeds.</string>
    <string name="pkmn8">Its tail is large and covered with a rich, thick fur. The tail becomes increasingly deeper in color as Wartortle ages. The scratches on its shell are evidence of this Pokémon\'s toughness as a battler.</string>
    <string name="pkmn9">Blastoise has water spouts that protrude from its shell. The water spouts are very accurate. They can shoot bullets of water with enough accuracy to strike empty cans from a distance of over 160 feet.</string>
    <string name="pkmn10">Caterpie has a voracious appetite. It can devour leaves bigger than its body right before your eyes. From its antenna, this Pokémon releases a terrifically strong odor.</string>
    <string name="pkmn11">The shell covering this Pokémon\'s body is as hard as an iron slab. Metapod does not move very much. It stays still because it is preparing its soft innards for evolution inside the hard shell.</string>
    <string name="pkmn12">Butterfree has a superior ability to search for delicious honey from flowers. It can even search out, extract, and carry honey from flowers that are blooming over six miles from its nest.</string>
    <string name="pkmn13">Weedle has an extremely acute sense of smell. It is capable of distinguishing its favorite kinds of leaves from those it dislikes just by sniffing with its big red proboscis (nose).</string>
    <string name="pkmn14">Kakuna remains virtually immobile as it clings to a tree. However, on the inside, it is extremely busy as it prepares for its coming evolution. This is evident from how hot the shell becomes to the touch.</string>
    <string name="pkmn15">Beedrill is extremely territorial. No one should ever approach its nest—this is for their own safety. If angered, they will attack in a furious swarm.</string>
    <string name="pkmn16">Pidgey has an extremely sharp sense of direction. It is capable of unerringly returning home to its nest, however far it may be removed from its familiar surroundings.</string>
    <string name="pkmn17">Pidgeotto claims a large area as its own territory. This Pokémon flies around, patrolling its living space. If its territory is violated, it shows no mercy in thoroughly punishing the foe with its sharp claws.</string>
    <string name="pkmn18">This Pokémon has a dazzling plumage of beautifully glossy feathers. Many Trainers are captivated by the striking beauty of the feathers on its head, compelling them to choose Pidgeot as their Pokémon.</string>
    <string name="pkmn19">Rattata is cautious in the extreme. Even while it is asleep, it constantly listens by moving its ears around. It is not picky about where it lives—it will make its nest anywhere.</string>
    <string name="pkmn20">Raticate\'s sturdy fangs grow steadily. To keep them ground down, it gnaws on rocks and logs. It may even chew on the walls of houses.</string>
    <string name="pkmn21">Spearow has a very loud cry that can be heard over half a mile away. If its high, keening cry is heard echoing all around, it is a sign that they are warning each other of danger.</string>
    <string name="pkmn22">Fearow is recognized by its long neck and elongated beak. They are conveniently shaped for catching prey in soil or water. It deftly moves its long and skinny beak to pluck prey.</string>
    <string name="pkmn23">Ekans curls itself up in a spiral while it rests. Assuming this position allows it to quickly respond to a threat from any direction with a glare from its upraised head.</string>
    <string name="pkmn24">This Pokémon is terrifically strong in order to constrict things with its body. It can even flatten steel oil drums. Once Arbok wraps its body around its foe, escaping its crunching embrace is impossible.</string>
    <string name="pkmn25">Whenever Pikachu comes across something new, it blasts it with a jolt of electricity. If you come across a blackened berry, it\'s evidence that this Pokémon mistook the intensity of its charge.</string>
    <string name="pkmn26">If the electrical sacs become excessively charged, Raichu plants its tail in the ground and discharges. Scorched patches of ground will be found near this Pokémon\'s nest.</string>
    <string name="pkmn27">Sandshrew\'s body is configured to absorb water without waste, enabling it to survive in an arid desert. This Pokémon curls up to protect itself from its enemies.</string>
    <string name="pkmn28">Sandslash\'s body is covered by tough spikes, which are hardened sections of its hide. Once a year, the old spikes fall out, to be replaced with new spikes that grow out from beneath the old ones.</string>
    <string name="pkmn29">Nidoran♀ has barbs that secrete a powerful poison. They are thought to have developed as protection for this small-bodied Pokémon. When enraged, it releases a horrible toxin from its horn.</string>
    <string name="pkmn30">When Nidorina are with their friends or family, they keep their barbs tucked away to prevent hurting each other. This Pokémon appears to become nervous if separated from the others.</string>
    <string name="pkmn31">Nidoqueen\'s body is encased in extremely hard scales. It is adept at sending foes flying with harsh tackles. This Pokémon is at its strongest when it is defending its young.</string>
    <string name="pkmn32">Nidoran♂ has developed muscles for moving its ears. Thanks to them, the ears can be freely moved in any direction. Even the slightest sound does not escape this Pokémon\'s notice.</string>
    <string name="pkmn33">Nidorino has a horn that is harder than a diamond. If it senses a hostile presence, all the barbs on its back bristle up at once, and it challenges the foe with all its might.</string>
    <string name="pkmn34">Nidoking\'s thick tail packs enormously destructive power. With one swing, it can topple a metal transmission tower. Once this Pokémon goes on a rampage, there is no stopping it.</string>
    <string name="pkmn35">On every night of a full moon, groups of this Pokémon come out to play. When dawn arrives, the tired Clefairy return to their quiet mountain retreats and go to sleep nestled up against each other.</string>
    <string name="pkmn36">Clefable moves by skipping lightly as if it were flying using its wings. Its bouncy step lets it even walk on water. It is known to take strolls on lakes on quiet, moonlit nights.</string>
    <string name="pkmn37">At the time of its birth, Vulpix has one white tail. The tail separates into six if this Pokémon receives plenty of love from its Trainer. The six tails become magnificently curled.</string>
</resources>