<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/splashwrite"
        android:id="@+id/splashwrite"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="Brought to you by:"
        android:id="@+id/broughtby"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:textStyle="bold|italic"
        android:text="@string/team_name"
        android:layout_toEndOf="@+id/broughtby"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/defendenti"
        android:text="@string/defendenti"
        android:layout_below="@+id/name"
        android:layout_marginTop="50dp"
        android:textSize="13sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/app-design-programming"
        android:text=": App Design and Programming"
        android:layout_toEndOf="@+id/defendenti"
        android:layout_below="@+id/name"
        android:layout_marginTop="50dp"
        android:textSize="13sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sangalli"
        android:text="@string/sangalli"
        android:layout_below="@+id/defendenti"
        android:layout_marginTop="10dp"
        android:textSize="13sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/two-d-design"
        android:text=": 2D Design"
        android:layout_toEndOf="@+id/sangalli"
        android:layout_below="@+id/defendenti"
        android:layout_marginTop="10dp"
        android:textSize="13sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/silletti"
        android:text="@string/silletti"
        android:layout_below="@+id/sangalli"
        android:layout_marginTop="10dp"
        android:textSize="13sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/two-d-design-and-app-design"
        android:text=": 2D Design and App Design"
        android:layout_toEndOf="@+id/silletti"
        android:layout_below="@+id/sangalli"
        android:layout_marginTop="10dp"
        android:textSize="13sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tagliabue"
        android:text="@string/tagliabue"
        android:layout_below="@+id/silletti"
        android:layout_marginTop="10dp"
        android:textSize="13sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/programming"
        android:text=": Programming"
        android:layout_toEndOf="@+id/tagliabue"
        android:layout_below="@+id/silletti"
        android:layout_marginTop="10dp"
        android:textSize="13sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/zanaboni"
        android:text="@string/zanaboni"
        android:layout_below="@+id/tagliabue"
        android:layout_marginTop="10dp"
        android:textSize="13sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/three-d-design-and-brand-communication"
        android:text=": 3D Design and Brand Communication"
        android:layout_toEndOf="@+id/zanaboni"
        android:layout_below="@+id/tagliabue"
        android:layout_marginTop="10dp"
        android:textSize="13sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:id="@+id/contact_us"/>

</RelativeLayout>